// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders default 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

<Img>
  <img
    className="c0"
  />
</Img>
`;

exports[`<Img /> renders with theme 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(100%);
  filter: invert(100%);
}

<Img
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <img
    className="c0"
  />
</Img>
`;

exports[`<ImgInline /> renders default 1`] = `
.c0 {
  display: inline-block;
  width: auto;
  height: 2rem;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

<Img__ImgInline>
  <img
    className="c0"
  />
</Img__ImgInline>
`;

exports[`<ImgInline /> renders with theme 1`] = `
.c0 {
  display: inline-block;
  width: auto;
  height: 2rem;
  -webkit-filter: invert(100%);
  filter: invert(100%);
}

<Img__ImgInline
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <img
    className="c0"
  />
</Img__ImgInline>
`;

exports[`renders default <ImgIcon /> 1`] = `
.c0 {
  width: 100%;
  height: auto;
  -webkit-filter: invert(0%);
  filter: invert(0%);
}

.c1 {
  width: 3rem;
}

<img
  className="c0 c1"
/>
`;
